# testpytorchCPP

./: CImg.h  CMakeLists.txt  Pasos para LIBTORCH en Windows con CUDA.docx  convert_tensor.cpp  cvMat.h  predictionbatch_RGBNIR_CPU.cpp  predictionbatch_RGBNIR_CUDA.cpp  predictionbatch_RGBNIR_CUDA_sync.cpp  predictionbatch_RGBNIR_CUDAsize.cpp  salida_cmake_Linux.txt  save_inputtensor.cpp  tiempos_antonio_windows_octubre_2023.txt  trt_predictionbatch_RGBNIR_CUDA.cpp
Arandanos-rundir/: arandano.cimg  input_tensor.cimg
